applications/explainshell/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: explainshell
  name: explainshell
