applications/explainshell/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb-service
  namespace: explainshell
spec:
  clusterIP: None
  selector:
    app: mongodb-service
  sessionAffinity: None
  type: ClusterIP
