applications/explainshell/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explainshell-web-service
  namespace: explainshell
spec:
  ports:
    - name: web
      port: 80
      targetPort: 5000
  selector:
    app: explainshell-web
  type: ClusterIP
