applications/explainshell/explainshell-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
  name: explanshell-ingress
  namespace: explainshell
spec:
  tls:
    - hosts:
        - explainshell.openeuler.sh
      secretName: explainshell-cert-secrets
  rules:
    - host: explainshell.openeuler.sh
      http:
        paths:
          - backend:
              serviceName: explainshell-web-service
              servicePort: 80
            path: /
